설정 옵션 추가  - h2 db  - mybatis  - 로그

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
+# set datasource
+spring.datasource.url=jdbc:h2:mem:test
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
 
+# mybatis 설정하기
+mybatis.type-aliases-package=com.kakaopay.banksupport.model
+mybatis.mapper-locations=classpath:mapper/**/*.xml
+mybatis.configuration.map-underscore-to-camel-case=true
+
+# sql log 출력
+logging.level.com.myuoong.appAdmin.mapper=TRACE
+logging.level.org.springframework.web=ERROR
+
+# 공통 설정, todo: classpath으로 해서 데이터 읽어볼수 있도록 변경하기
+com.initDataFilePath=/Users/jungwoongpark/Documents/workspace/bank-support/src/main/resources/data/initDataSet.csv
+
+
+# debug log 설정
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSS} ${LOG_LEVEL_PATTERN:-%5p} ${PID:- } [%t] %-40.40logger{39} : %m%n${LOG_EXCEPTION_CONVERSION_WORD:-%wEx}
