jwt 인증 추가  - id/pw 로그인 부분만 추가함

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,12 @@ logging.level.org.springframework.web=ERROR
 # 공통 설정, todo: classpath으로 해서 데이터 읽어볼수 있도록 변경하기
 com.initDataFilePath=/Users/jungwoongpark/Documents/workspace/bank-support/src/main/resources/data/initDataSet.csv
 
+# jwt 설정
+com.jwt.jwtIssuer=myuoong
+com.jwt.jwtAccessExpTime=3
+com.jwt.jwtRefreshExpTime=60
+com.jwt.jwtSigningKey=abcdefghijkl
+
 
 # debug log 설정
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSS} ${LOG_LEVEL_PATTERN:-%5p} ${PID:- } [%t] %-40.40logger{39} : %m%n${LOG_EXCEPTION_CONVERSION_WORD:-%wEx}
