설정값 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,16 +5,17 @@ spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 
 # mybatis 설정하기
-mybatis.type-aliases-package=com.kakaopay.banksupport.model
+mybatis.type-aliases-package=com.kakaopay.banksupport
 mybatis.mapper-locations=classpath:mapper/**/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
 
 # sql log 출력
-logging.level.com.myuoong.appAdmin.mapper=TRACE
+logging.level.com.kakaopay.banksupport.mapper=TRACE
 logging.level.org.springframework.web=ERROR
 
-# 공통 설정, todo: classpath으로 해서 데이터 읽어볼수 있도록 변경하기
-com.initDataFilePath=/Users/jungwoongpark/Documents/workspace/bank-support/src/main/resources/data/initDataSet.csv
+# 공통 설정
+com.initDataFilePath=./src/main/resources/data/initDataSet.csv
+#com.initDataFilePath=/Users/jungwoongpark/Documents/workspace/bank-support/src/main/resources/data/initDataSet.csv
 
 # jwt 설정
 com.jwt.jwtIssuer=myuoong
@@ -22,6 +23,11 @@ com.jwt.jwtAccessExpTime=3
 com.jwt.jwtRefreshExpTime=60
 com.jwt.jwtSigningKey=abcdefghijkl
 
-
 # debug log 설정
-logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSS} ${LOG_LEVEL_PATTERN:-%5p} ${PID:- } [%t] %-40.40logger{39} : %m%n${LOG_EXCEPTION_CONVERSION_WORD:-%wEx}
+#debug=true
+spring.devtools.remote.secret=mysecret
+
+logging.level.root=info
+logging.level.com=debug
+logging.pattern.console=[%d{yyyy-MM-dd HH:mm:ss}][%-5level][%F] %msg%n
+#logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSS} ${LOG_LEVEL_PATTERN:-%5p} ${PID:- } [%t] %-40.40logger{39} : %m%n${LOG_EXCEPTION_CONVERSION_WORD:-%wEx}
